--- a/voyages/sitemedia/scss/main.scss
+++ b/voyages/sitemedia/scss/main.scss
@@ -391,13 +391,13 @@ footer {
 //   z-index: 0;
 // }
 
-.leaflet-pane {
-  z-index: 0 !important;
-}
+// .leaflet-pane {
+//   z-index: 0 !important;
+// }
 
-.leaflet-overlay-pane {
-  z-index: 200 !important;
-}
+// .leaflet-overlay-pane {
+//   z-index: 200 !important;
+// }
 
 .navbar-subtitle {
   font-weight: 500;
